--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
 # To ensure app dependencies are ported from your virtual environment/host machine into your container, run 'pip freeze > requirements.txt' in the terminal to overwrite this file
-pyrogram
 environs
-tgcrypto
+python-telegram-bot
